--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(230, 53, 53);
 }
 
 .App-link {
